CH2 L7 add new btn

--- a/studyMyAlbum/Base.lproj/Main.storyboard
+++ b/studyMyAlbum/Base.lproj/Main.storyboard
@@ -25,6 +25,15 @@
                                     <action selector="hello:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4c7-gS-fRr"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PRC-Py-EQc">
+                                <rect key="frame" x="147" y="521" width="121" height="43"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <connections>
+                                    <action selector="newBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="KII-Ew-seQ"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
